--- a/portfolio-site/src/app/components/navigation/navigation.component.scss
+++ b/portfolio-site/src/app/components/navigation/navigation.component.scss
@@ -50,4 +50,9 @@
       background-color: rgba(255, 255, 255, 0.2);
     }
   }
+}
+
+mat-sidenav-content {
+  background-color: #1a1a1a;
+  color: white;
 } 
