--- a/portfolio-site/src/app/components/jobs/jobs.component.html
+++ b/portfolio-site/src/app/components/jobs/jobs.component.html
@@ -1,1 +1,21 @@
-<p>jobs works!</p>
+<div class="jobs-container">
+  <h1>Work Experience</h1>
+  <div class="jobs-list">
+    <mat-card *ngFor="let job of jobs" class="job-card">
+      <mat-card-header>
+        <mat-card-title>{{ job.company }}</mat-card-title>
+        <mat-card-subtitle>{{ job.location }}</mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+        <div class="job-details">
+          <div class="position">{{ job.position }}</div>
+          <div class="duration">{{ job.duration }}</div>
+        </div>
+        <mat-divider></mat-divider>
+        <ul class="responsibilities">
+          <li *ngFor="let responsibility of job.responsibilities">{{ responsibility }}</li>
+        </ul>
+      </mat-card-content>
+    </mat-card>
+  </div>
+</div>
