Add footer with border and update app layout

--- a/portfolio-site/src/app/app.component.html
+++ b/portfolio-site/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-navigation></app-navigation>
+<div class="app-container">
+  <app-navigation></app-navigation>
+  <app-footer></app-footer>
+</div>
