--- a/portfolio-site/src/app/app.component.scss
+++ b/portfolio-site/src/app/app.component.scss
@@ -1,2 +1,11 @@
 // Styles moved to navigation component
 
+.app-container {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  
+  // Add padding to the bottom to prevent content from being hidden behind the fixed footer
+  padding-bottom: 60px;
+}
+
