Update code for certifications

--- a/portfolio-site/src/app/components/about-me/about-me.component.html
+++ b/portfolio-site/src/app/components/about-me/about-me.component.html
@@ -1,25 +1,39 @@
-<mat-card class="about-me-card">
+<h1>About Me</h1>
+<mat-card>
   <mat-card-header>
-    <mat-card-title>About Me</mat-card-title>
+    <mat-card-title>Developer at heart</mat-card-title>
   </mat-card-header>
   <img mat-card-image src="assets/images/profile.jpg" alt="Brett Morin" class="profile-image">
   <mat-card-content>
     <p>
-      I love to code and build software. I am a full-stack software developer, 
-      specializing in creating efficient, scalable, and user-friendly applications. With expertise in modern 
-      web technologies and a keen eye for detail, I strive to learn new technologies and build software that 
-      is easy to use and maintain.
+      I am a full stack develolper that loves to code and build software.  I have a passion for modern 
+      technologies and a keen eye for detail.  I strive to learn new technologies and build software that 
+      is easy to use and maintain.  I &#x2764; C#, but also enjoy working with SQL, TypeScript, and Angular.  I am self taught and have many certifications.  
+      But I honestly feel I love the development process of learning as you go.  I use AI and other tools but I also like to be in the driver's seat and understand what I am doing.
     </p>
     <p>
-      My experience spans across various industries, where I've successfully implemented complex systems, 
+      My experience is in various industries, where I've successfully implemented complex systems, 
       optimized performance, and collaborated with cross-functional teams at home and abroad to deliver exceptional results.  
       My main love is C# and .NET, but I'm also proficient in Angular, TypeScript, and modern web development practices, with a strong 
-      focus on clean code architecture and best practices.  I love doing anyting from the database to the UI.
+      focus on clean code architecture and best practices.  I love doing anything from the database to the UI.  I have worked from teeny companies of 7 or so to huge companies of 1000+.
     </p>
     <p>
       I'm constantly learning and adapting to new technologies, always looking for opportunities to improve 
       my skills and contribute to innovative projects. My goal is to create meaningful software solutions 
-      that make a positive impact while maintaining high standards of quality and performance.
+      that make a positive impact while maintaining high standards of quality and performance.  I really work the best when I love the code I am working on and the people I am working with.
+      I firmly believe a good team doing good together can accomplish anything.  I love to teach as well as learn myself.
+    </p>
+  </mat-card-content>
+</mat-card>
+<mat-card class="about-me-card">
+  <mat-card-header>
+    <mat-card-title>Personal Interests</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <p>
+      I'm a father of two kids and a wife in the Pacific Northwest's glorious city of Portland OR.  I have lived here for about 22 years and love it.  I like to venture around the city
+      and the surrounding areas.  I love to play guitar occasionally, I love video games, and playing tennis from time to time.  I enjoy the food culture and beauty of the NW and will often
+      travel around the state.
     </p>
   </mat-card-content>
 </mat-card>
