--- a/portfolio-site/src/app/components/certifications/certifications.component.html
+++ b/portfolio-site/src/app/components/certifications/certifications.component.html
@@ -1,1 +1,26 @@
-<p>certifications works!</p>
+<h1>Certifications</h1>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>Microsoft MCP</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <ul>
+        <li>Solutions Associate: Web Applications</li>
+        <li>Technology Specialist: .NET Framework 4, Web Applications</li>
+        <li>Technology Specialist: .NET Framework 4, Data Access</li>
+        <li>Solutions Associate: SQL Server 2008</li>
+        <li>Technology Specialist: SQL Server 2008 Business Intelligence </li>
+    </ul>
+  </mat-card-content>
+</mat-card>
+
+<mat-card>
+    <mat-card-header>
+      <mat-card-title>Amazon</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <ul>
+          <li>Certified Solutions Architect – Associate (Active 2023 to 2026)</li>
+      </ul>
+    </mat-card-content>
+  </mat-card>
