--- a/portfolio-site/src/app/components/footer/footer.component.html
+++ b/portfolio-site/src/app/components/footer/footer.component.html
@@ -1,3 +1,3 @@
 <mat-toolbar class="footer">
-  <span>Created by Brett Morin 2025, using Cursor  with Angular 18 and Angular Material</span>
+  <span>Created by Brett Morin 2025 with Angular 18 and Angular Material</span>
 </mat-toolbar> 
