--- a/portfolio-site/src/styles.scss
+++ b/portfolio-site/src/styles.scss
@@ -2,3 +2,45 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+h1 {
+    margin-top: 20px;
+    color: #ffffff;
+    margin-bottom: 2rem;
+    font-size: 2.5rem;
+    text-align: center;
+  }
+
+mat-card {
+    background-color: #2a2a2a;
+    color: #ffffff;
+    border-radius: 8px;
+    transition: transform 0.3s ease;
+    padding: 1rem;
+    margin: 1rem;
+
+    mat-card-header {
+        margin-bottom: 1rem;
+        
+        mat-card-title {
+          font-size: 2rem;
+          font-weight: 500;
+          color: #3498db;
+        }
+    
+        mat-card-subtitle {
+            color: #b0b0b0;
+          }
+      }
+    
+      mat-card-content {
+        p {
+          color: rgba(255, 255, 255, 0.87);
+          line-height: 1.6;
+          margin-bottom: 1rem;
+          font-size: 1.1rem;
+        }
+      }
+}
+
+  
