--- a/portfolio-site/src/styles.scss
+++ b/portfolio-site/src/styles.scss
@@ -1,5 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
-
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
@@ -43,4 +41,14 @@ mat-card {
       }
 }
 
-  
+.mat-slider-thumb {
+  background-color: #00796b !important; /* Deep teal color */
+}
+
+.mat-slider-track-fill {
+  background-color: #004d40 !important; /* Darker teal for the filled track */
+}
+
+.mat-slider-track-background {
+  background-color: #b2dfdb !important; /* Lighter teal for the background track */
+}
