--- a/portfolio-site/src/app/components/jobs/jobs.component.scss
+++ b/portfolio-site/src/app/components/jobs/jobs.component.scss
@@ -1,3 +1,5 @@
+@use '../../../../m3-theme.scss' as theme;
+
 @Import '../../../styles.scss';
 
 
@@ -14,7 +16,7 @@
     .position {
       font-size: 1.2rem;
       font-weight: 500;
-      color: #00bcd4;
+      color: #99745A;
     }
   }
   
