--- a/portfolio-site/src/app/app.component.html
+++ b/portfolio-site/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="app-container">
+  <app-bar title="I'm Brett Morin and welcome to my Portfolio site!"></app-bar>
   <app-navigation></app-navigation>
-  <app-footer></app-footer>
-  </div>
+  <app-bar title="Created by Brett Morin 2025 with Angular 18 and Angular Material"></app-bar>
+</div>
