--- a/portfolio-site/src/app/components/navigation/navigation.component.scss
+++ b/portfolio-site/src/app/components/navigation/navigation.component.scss
@@ -1,32 +1,26 @@
 @use '@angular/material' as mat;
+@use '../../../../m3-theme.scss' as theme;
+
 
 .sidenav-container {
-  height: 100vh;
+  height: 91.5vh;
 }
 
 .sidenav {
-  width: 17%;
-  background-color: #00695c;
-  color: white;
+  width: 20%;
+  background-color: theme.get-palette-value('primary', 10);
+  color: theme.get-palette-value('primary', 20);
 
-  ::ng-deep {
-    .mat-drawer-inner-container {
-      border-radius: 0;
-    }
-  }
 }
 
 .sidenav-content {
+  flex: 1; /* Allow this section to grow and take up remaining space */
+  overflow-y: fixed; /* Enable vertical scrolling only for this section */
   padding: 20px;
   display: flex;
   flex-direction: column;
   gap: 1rem;
 
-  h2 {
-    margin: 0;
-    padding-bottom: 1rem;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-  }
 
   nav {
     display: flex;
@@ -35,7 +29,7 @@
   }
 
   a {
-    color: white;
+    color: theme.get-palette-value('primary', 80);
     text-align: left;
     justify-content: flex-start;
     padding: 0.5rem 1rem;
@@ -43,16 +37,16 @@
     border-radius: 0;
 
     &:hover {
-      background-color: rgba(255, 255, 255, 0.1);
+      background-color: theme.get-palette-value('primary', 40);
     }
 
     &.active {
-      background-color: rgba(255, 255, 255, 0.2);
+      background-color: theme.get-palette-value('primary', 50);
     }
   }
 }
 
 mat-sidenav-content {
   background-color: #1a1a1a;
-  color: white;
+  color: theme.get-palette-value('primary', 70);
 } 
