--- a/portfolio-site/src/app/components/about-me/about-me.component.scss
+++ b/portfolio-site/src/app/components/about-me/about-me.component.scss
@@ -1,4 +1,3 @@
-@use '../../../../m3-theme.scss' as theme;
 @import '../../../styles.scss';
 
   .profile-image {
@@ -7,7 +6,7 @@
     margin: 0 auto 1.5rem;
     display: block;
     object-fit: cover;
-    border: 10px solid theme.get-palette-value('primary', 50);
+    border: 10px solid $teal;
   }
 
   
