--- a/portfolio-site/src/app/components/jobs/jobs.component.scss
+++ b/portfolio-site/src/app/components/jobs/jobs.component.scss
@@ -1,6 +1,4 @@
-@use '../../../../m3-theme.scss' as theme;
-
-@Import '../../../styles.scss';
+@import '../../../styles.scss';
 
 
 .jobs-list {
@@ -16,7 +14,7 @@
     .position {
       font-size: 1.2rem;
       font-weight: 500;
-      color: #99745A;
+      color: $tan;
     }
   }
   
