--- a/portfolio-site/src/app/components/navigation/navigation.component.scss
+++ b/portfolio-site/src/app/components/navigation/navigation.component.scss
@@ -1,5 +1,4 @@
-@use '@angular/material' as mat;
-@use '../../../../m3-theme.scss' as theme;
+@import "../../../styles.scss";
 
 
 .sidenav-container {
@@ -8,8 +7,8 @@
 
 .sidenav {
   width: 20%;
-  background-color: theme.get-palette-value('primary', 10);
-  color: theme.get-palette-value('primary', 20);
+  background-color: $veryDarkTeal;
+  color: $darkBackground;
 
 }
 
@@ -29,7 +28,7 @@
   }
 
   a {
-    color: theme.get-palette-value('primary', 80);
+    color: $lighterTeal;
     text-align: left;
     justify-content: flex-start;
     padding: 0.5rem 1rem;
@@ -37,16 +36,16 @@
     border-radius: 0;
 
     &:hover {
-      background-color: theme.get-palette-value('primary', 40);
+      background-color: $darkTeal;
     }
 
     &.active {
-      background-color: theme.get-palette-value('primary', 50);
+      background-color: $teal;
     }
   }
 }
 
 mat-sidenav-content {
   background-color: #1a1a1a;
-  color: theme.get-palette-value('primary', 70);
+  color: $lighterTeal;
 } 
