--- a/portfolio-site/src/styles.scss
+++ b/portfolio-site/src/styles.scss
@@ -3,6 +3,17 @@
 
 @include mat.core();
 
+$white: #ffffff;
+$darkBackground: #2a2a2a;
+$veryDarkTeal: #003739;
+$darkTeal: #00696e;
+$teal: #2c8388;
+$lightTeal: #4b9da2;
+$lighterTeal: #67b8bd;
+$lighestTeal: #9ff0f5;
+
+$tan: #99745A;
+
 html {
   @include mat.core-theme(theme.$dark-theme);
   @include mat.button-theme(theme.$dark-theme);
@@ -13,15 +24,15 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 h1 {
     margin-top: 20px;
-    color: theme.get-palette-value('primary', 60);
+    color: $lightTeal;
     margin-bottom: 2rem;
     font-size: 2.5rem;
     text-align: center;
   }
 
 mat-card {
-    background-color: #2a2a2a;
-    color: #ffffff;
+    background-color: $darkBackground;
+    color: $white;
     border-radius: 8px;
     transition: transform 0.3s ease;
     padding: 1rem;
@@ -33,7 +44,7 @@ mat-card {
         mat-card-title {
           font-size: 2rem;
           font-weight: 500;
-          color: theme.get-palette-value('primary', 50);
+          color: $teal;
         }
     
         mat-card-subtitle {
