More styling changes

--- a/portfolio-site/src/app/app.component.html
+++ b/portfolio-site/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="app-container">
-  <app-bar title="I'm Brett Morin and welcome to my Portfolio site!"></app-bar>
+  <app-bar title="I'm Brett Morin and welcome to my portfolio site!"></app-bar>
   <app-navigation></app-navigation>
   <app-bar title="Created by Brett Morin 2025 with Angular 18 and Angular Material"></app-bar>
 </div>
