--- a/portfolio-site/src/styles.scss
+++ b/portfolio-site/src/styles.scss
@@ -68,13 +68,13 @@ mat-card {
   margin: 0 auto 1.5rem;
   display: block;
   object-fit: cover;
-  border: 10px solid $teal;
+  border: 10px solid $tan;
 }
 
 .setting {
   height: 60px;
   background-color: $veryDarkTeal;
-  color: $lighterTeal;
+  color: $tan;
   justify-content: center;
   align-items: center;
   font-size: 2rem;
