Added contact section

--- a/portfolio-site/src/app/components/navigation/navigation.component.html
+++ b/portfolio-site/src/app/components/navigation/navigation.component.html
@@ -3,8 +3,9 @@
     <div class="sidenav-content">
       <nav>
         <a mat-button routerLink="/about" routerLinkActive="active">About Me</a>
-        <a mat-button routerLink="/jobs" routerLinkActive="active">Jobs</a>
+        <a mat-button routerLink="/jobs" routerLinkActive="active">Work Experience</a>
         <a mat-button routerLink="/certifications" routerLinkActive="active">Certifications</a>
+        <a mat-button routerLink="/contact" routerLinkActive="active">Contact</a>
       </nav>
     </div>
   </mat-sidenav>
